# watchdog

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE
bruno/: bruno.json
bruno/applications/: GetAllApplicationNames.bru  GetAllJobsByApplication.bru  folder.bru
bruno/channels/: CreateChannel.bru  GetAllChannels.bru  GetAllProviderTypes.bru  GetChannelById.bru  GetJobByAppAndName.bru  UpdateChannel.bru  UpdateJob.bru  folder.bru
bruno/environments/: local.bru  nonprod.bru  prod.bru
bruno/events/: EventComplete.bru  EventStageFailed.bru  EventStart.bru  EventTrigger.bru  GetEventById.bru
bruno/health/: health.bru  index.bru  liveness.bru  readiness.bru
bruno/jobs/: CreateJob.bru  GetAll.bru  GetAllApplicationNames.bru  GetAllJobConfigs.bru  GetAllJobsByApplication.bru  GetJobByApp.bru  GetJobByAppAndName.bru  GetJobById.bru  UpdateJob.bru
bruno/runs/: GetAllRuns.bru  GetRunById.bru  JobRunTrigger.bru  RunStageComplete.bru  RunStageFailed.bru  RunStageStart.bru  folder.bru
bruno/settings/: GetSettings.bru  UpdateSettings.bru  folder.bru
migrations/2025-11-29-131807-0000_create_job_config/: down.sql  up.sql
migrations/2025-12-01-152511-0000_job_runs/: down.sql  up.sql
migrations/2025-12-07-053351-0000_notif_channels/: down.sql  up.sql
migrations/2025-12-27-091630-0000_global_settings/: up.sql
migrations/2026-02-01-205602-0000_pub_sub_triggers/: down.sql  up.sql
src/: config.rs  cron_utils.rs  db.rs  dtos.rs  errors.rs  jsend.rs  main.rs  migrations.rs  models.rs  notification.rs  pubsub.rs  router.rs  scheduler.rs  schema.rs  settings.rs  time_utils.rs  validations.rs
src/api/: channel_handler.rs  config_handler.rs  event_handler.rs  health_handler.rs  mod.rs  run_handler.rs  settings_handler.rs
src/core/: entities.rs  job_run_matching.rs  job_stage_validations.rs  mod.rs  process_timeouts.rs
src/db/: channel_repository.rs  config_repository.rs  connection.rs  mod.rs  run_repository.rs  settings_repository.rs
src/dtos/: channel.rs  job_config.rs  job_run.rs  mod.rs  settings.rs
src/notification/: core.rs  dispatcher.rs  email_plugin.rs  gchat_plugin.rs  init.rs  mod.rs  plugin_registry.rs  slack_plugin.rs
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/app/: layout.tsx
web/app/jobs/[id]/edit/: page.tsx
web/app/jobs/[id]/runs/[runId]/: page.tsx
web/app/jobs/create/: page.tsx
web/components/jobs/: job-form.tsx  job-run-details.tsx  jobs-list.tsx  log-timeline.tsx  status-badge.tsx
web/src/: App.css  App.tsx  AppLayout.tsx  index.css
web/src/api/: channels.ts  common.ts  jobs.ts
web/src/components/: JobForm.tsx  StatusBadge.tsx  Timeline.tsx
web/src/components/jobs/: RunTimeline.tsx  job-form-sheet.tsx  job-form.tsx  job-form2.tsx  jobs-list.tsx  status-badge.tsx
web/src/components/sheets/: channel-form-sheet.tsx  job-form-sheet.tsx
web/src/components/ui/: multi-select.tsx
web/src/lib/: fetcher.ts  helpers.ts  jsend.ts  types.ts
web/src/pages/: ChannelsPage.tsx  CreateJob.tsx  CreateJobPage.tsx  EditJob.tsx  EditJobPage.tsx  GlobalSettingsPage.tsx  HomePage.tsx  JobConfigPage.tsx  JobRunDetails.tsx  JobRunDetailsPage.tsx  JobRunPage.tsx  JobsList.tsx
web/src/styles/: job-form.css  job-run-details.css  jobs-list.css  status-badge.css  timeline.css
