[package]
name = "watchdog"
version = "0.1.0"
edition = "2024"

[dependencies]
# Core Web & Async
axum = "0.8.6"
tokio = { version = "1.48.0", features = ["full"] }

# Serialization / Deserialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"

# AWS & DynamoDB
aws-config = "1.1"
aws-sdk-dynamodb = "1.15"
# serde_dynamo simplifies mapping structs to/from DynamoDB items
serde_dynamo = { version = "4.3.0", features = ["aws-sdk-dynamodb+1"] }

# Concurrency & Logging
#tower-http = { version = "0.5", features = ["cors"] }
dashmap = "7.0.0-rc2"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
#tracing-subscriber = { version = "0.3", features = ["env-filter"] }

#utils
chrono = { version = "0.4.42", features = ["serde"] }