[package]
name = "watchdog"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
diesel = { version = "2.2.0", features = ["postgres", "uuid", "chrono", "serde_json", "r2d2"] }
thiserror = "1.0"
anyhow = "1.0"
#tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15.7"
validator = { version = "0.20.0", features = ["derive"] }
rand = "0.8.5"
uuid = { version = "1.18.0", features = ["serde", "v4"] }
bb8 = "0.9.0"
diesel-async = { version = "0.7.4", features = ["postgres", "bb8"] }
bigdecimal = "0.4.9"
log = "0.4.28"
tower-http = { version = "0.5", features = ["cors", "fs"] }
regex = "1.12.2"
once_cell = "1.21.3"
base64-url = "3.0.0"

futures = "0.3.31"
argon2 = "0.6.0-rc.0"
rand_core = "0.6.4"
async-trait = "0.1.89"
headers = "0.4.1"
strum_macros = "0.27.2"
strum = "0.27.2"
hex = "0.4.3"
sha2 = "0.10"
sqlx = "0.9.0-alpha.1"
time = "0.3.44"
base64 = "0.22.1"
diesel-derive-enum = { version = "3.0.0-beta.1", features = ["postgres"] }
diesel_json = "0.3.0"

# Core Web & Async
#axum = "0.8.7"
#tokio = { version = "1.48.0", features = ["full"] }
#
## Serialization / Deserialization
#serde = { version = "1.0.228", features = ["derive"] }
#serde_json = "1.0.145"
#
#diesel = { version = "2.3.4", features = ["postgres", "serde_json", "r2d2", "chrono", "uuid"] }
#diesel-async = { version = "0.7.4", features = ["tokio", "postgres", "bb8"] }
#bb8 = "0.9.1"
#
## Concurrency & Logging
##tower-http = { version = "0.5", features = ["cors"] }
#dashmap = "7.0.0-rc2"
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
chrono-tz = "0.10.4"
cron = "0.15.0"
linked-hash-map = "0.5.6"
lettre = "0.11.19"
tera = "1.20.1"
validify = "2.0.0"
##tracing-subscriber = { version = "0.3", features = ["env-filter"] }
#
##utils
#chrono = { version = "0.4.42", features = ["serde"] }
#dotenvy = "0.15"
#
#futures = "0.3.31"
