[package]
name = "watchdog"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
diesel = { version = "2.2.0", features = ["postgres", "uuid", "chrono", "serde_json", "r2d2"] }
diesel_migrations = { version = "2.2.0", features = ["postgres"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15.7"
validator = { version = "0.20.0", features = ["derive"] }
uuid = { version = "1.18.0", features = ["serde", "v4"] }
bb8 = "0.9.0"
diesel-async = { version = "0.7.4", features = ["postgres", "bb8"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }

futures = "0.3.31"
async-trait = "0.1.89"
strum_macros = "0.27.2"
strum = "0.27.2"
diesel-derive-enum = { version = "3.0.0-beta.1", features = ["postgres"] }
diesel_json = "0.3.0"

tracing = "0.1.43"
tracing-subscriber = "0.3.22"
chrono-tz = "0.10.4"
cron = "0.15.0"
linked-hash-map = "0.5.6"
lettre = "0.11.19"
validify = "2.0.0"
reqwest = { version = "0.12.25", features = ["json"] }
tokio = { version = "1", features = ["full"] }
